# whitenoise_flutter

./: .cursorignore  .editorconfig  .gitignore  .repomix-output.txt  .repomix-plan-files.txt  .repomix-plan-filtered.txt  ANDROID_BUILD_SETUP.md  BUTTON_UPDATE_SUMMARY.md  CHANGELOG.md  METADATA_CACHING_SOLUTION.md  README.md  analysis_options.yaml  flake.nix  flutter_rust_bridge.yaml  justfile  pubspec.yaml  zapstore.yaml
.context/: 00_high_level.md  01_rust_api.md
.cursor/: whitenoise.mdc
.cursor/rules/: flutter.mdc  vibe-tools.mdc
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
.goose/memory/: bug_fixes.txt  debug_metadata_mixup.txt  enhanced_debugging.txt  metadata_cache_ui_integration_completed.txt  metadata_caching.txt  performance_optimization_implemented.txt  performance_optimization_plan.txt  root_cause_analysis.txt  root_cause_confirmed.txt  rust_duplicate_mitigation.txt  ui_improvements.txt
android/app/: build.gradle.kts  proguard-rules.pro
docs/: migration_2024_colors_buttons.md
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/config/: constants.dart
lib/debug/: metadata_debug_screen.dart
lib/examples/: metadata_cache_examples.dart
lib/routing/: chat_navigation_extension.dart  router.dart  router_provider.dart  routes.dart
lib/shared/: custom_bottom_sheet.dart  custom_button.dart  custom_icon_button.dart  custom_padded_button.dart  custom_textfield.dart  (+1 more)
linux/: CMakeLists.txt
local-research/: go_router_implementation_plan.md
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/src/: frb_generated.rs  lib.rs
rust/src/api/: accounts.rs  contacts.rs  groups.rs  messages.rs  mod.rs  relays.rs  utils.rs  wallet.rs  welcomes.rs
rust_builder/: pubspec.yaml
scripts/: README.md  build.sh  build_android.sh  build_release.sh  dev.sh  setup_android.sh  setup_android_config.sh
test/: theme_test.dart  widget_test.dart
windows/: CMakeLists.txt
(+228 files in other folders)
