[package]
name = "rust_lib_whitenoise"
version = "0.1.2"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
whitenoise = { version = "0.1.0", git = "https://github.com/parres-hq/whitenoise", rev = "33c24fc45b3fd5466dbcc095101a96dbfef94d55" }
# whitenoise = { version = "0.1.0", path = "../../whitenoise" }
tokio = { version = "1.44", features = ["rt", "rt-multi-thread"] }
serde_json = "1.0.140"
hex = "0.4"
url = "2.5.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

[lints.clippy]
not_unsafe_ptr_arg_deref = "allow"
